[package]
name = "tcp_packet"
version = "0.1.0"
edition = "2021"
authors = ["Andrew Mbugua"]
rust-version = "1.60.0"
description = "This crate is meant to demostrate the structure of a TCP Packet"
readme = "README.md"
repository = "https://github.com/AndrewMbugua/networking_projects/tree/main/tcp_packet"
license = "MIT"
keywords = ["networking"]


[[bin]]
name = "tcp_packet"
src = "src/main.rs"

[lib]
name = "tcp_packet"
src = "src/lib.rs"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }

